# serializer version: 1
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.1
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.10
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.11
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.12
  '''
  SELECT "clairview_dashboardtile"."id"
  FROM "clairview_dashboardtile"
  INNER JOIN "clairview_dashboard" ON ("clairview_dashboardtile"."dashboard_id" = "clairview_dashboard"."id")
  WHERE (NOT ("clairview_dashboardtile"."deleted"
              AND "clairview_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("clairview_dashboard"."deleted")
         AND "clairview_dashboardtile"."dashboard_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.13
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.14
  '''
  SELECT "clairview_dashboardtile"."id"
  FROM "clairview_dashboardtile"
  INNER JOIN "clairview_dashboard" ON ("clairview_dashboardtile"."dashboard_id" = "clairview_dashboard"."id")
  WHERE (NOT ("clairview_dashboardtile"."deleted"
              AND "clairview_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("clairview_dashboard"."deleted")
         AND "clairview_dashboardtile"."dashboard_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.15
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.16
  '''
  SELECT "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags"
  FROM "clairview_dashboarditem"
  WHERE "clairview_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.17
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.18
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.19
  '''
  SELECT "clairview_dashboardtile"."id",
         "clairview_dashboardtile"."dashboard_id",
         "clairview_dashboardtile"."insight_id",
         "clairview_dashboardtile"."text_id",
         "clairview_dashboardtile"."layouts",
         "clairview_dashboardtile"."color",
         "clairview_dashboardtile"."filters_hash",
         "clairview_dashboardtile"."last_refresh",
         "clairview_dashboardtile"."refreshing",
         "clairview_dashboardtile"."refresh_attempt",
         "clairview_dashboardtile"."deleted"
  FROM "clairview_dashboardtile"
  WHERE "clairview_dashboardtile"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.2
  '''
  SELECT 1 AS "a"
  FROM "clairview_organizationmembership"
  WHERE ("clairview_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "clairview_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.20
  '''
  SELECT "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags"
  FROM "clairview_dashboarditem"
  WHERE "clairview_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.21
  '''
  SELECT "clairview_dashboard"."id",
         "clairview_dashboard"."name",
         "clairview_dashboard"."description",
         "clairview_dashboard"."team_id",
         "clairview_dashboard"."pinned",
         "clairview_dashboard"."created_at",
         "clairview_dashboard"."created_by_id",
         "clairview_dashboard"."deleted",
         "clairview_dashboard"."last_accessed_at",
         "clairview_dashboard"."filters",
         "clairview_dashboard"."creation_mode",
         "clairview_dashboard"."restriction_level",
         "clairview_dashboard"."deprecated_tags",
         "clairview_dashboard"."tags",
         "clairview_dashboard"."share_token",
         "clairview_dashboard"."is_shared"
  FROM "clairview_dashboard"
  WHERE "clairview_dashboard"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.22
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.23
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.24
  '''
  SELECT "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags"
  FROM "clairview_dashboarditem"
  WHERE "clairview_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.25
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.26
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.27
  '''
  SELECT "clairview_dashboardtile"."id",
         "clairview_dashboardtile"."dashboard_id",
         "clairview_dashboardtile"."insight_id",
         "clairview_dashboardtile"."text_id",
         "clairview_dashboardtile"."layouts",
         "clairview_dashboardtile"."color",
         "clairview_dashboardtile"."filters_hash",
         "clairview_dashboardtile"."last_refresh",
         "clairview_dashboardtile"."refreshing",
         "clairview_dashboardtile"."refresh_attempt",
         "clairview_dashboardtile"."deleted"
  FROM "clairview_dashboardtile"
  WHERE "clairview_dashboardtile"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.28
  '''
  SELECT "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags"
  FROM "clairview_dashboarditem"
  WHERE "clairview_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.29
  '''
  SELECT "clairview_dashboard"."id",
         "clairview_dashboard"."name",
         "clairview_dashboard"."description",
         "clairview_dashboard"."team_id",
         "clairview_dashboard"."pinned",
         "clairview_dashboard"."created_at",
         "clairview_dashboard"."created_by_id",
         "clairview_dashboard"."deleted",
         "clairview_dashboard"."last_accessed_at",
         "clairview_dashboard"."filters",
         "clairview_dashboard"."creation_mode",
         "clairview_dashboard"."restriction_level",
         "clairview_dashboard"."deprecated_tags",
         "clairview_dashboard"."tags",
         "clairview_dashboard"."share_token",
         "clairview_dashboard"."is_shared"
  FROM "clairview_dashboard"
  WHERE "clairview_dashboard"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.3
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."key" = 'copied-flag-key'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.30
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.31
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.32
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.33
  '''
  SELECT "clairview_experiment"."id",
         "clairview_experiment"."name",
         "clairview_experiment"."description",
         "clairview_experiment"."team_id",
         "clairview_experiment"."filters",
         "clairview_experiment"."parameters",
         "clairview_experiment"."secondary_metrics",
         "clairview_experiment"."created_by_id",
         "clairview_experiment"."feature_flag_id",
         "clairview_experiment"."exposure_cohort_id",
         "clairview_experiment"."start_date",
         "clairview_experiment"."end_date",
         "clairview_experiment"."created_at",
         "clairview_experiment"."updated_at",
         "clairview_experiment"."archived",
         "clairview_experiment"."type",
         "clairview_experiment"."variants",
         "clairview_experiment"."metrics"
  FROM "clairview_experiment"
  WHERE "clairview_experiment"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.34
  '''
  SELECT "clairview_survey"."id",
         "clairview_survey"."team_id",
         "clairview_survey"."name",
         "clairview_survey"."description",
         "clairview_survey"."linked_flag_id",
         "clairview_survey"."targeting_flag_id",
         "clairview_survey"."internal_targeting_flag_id",
         "clairview_survey"."type",
         "clairview_survey"."conditions",
         "clairview_survey"."questions",
         "clairview_survey"."appearance",
         "clairview_survey"."created_at",
         "clairview_survey"."created_by_id",
         "clairview_survey"."start_date",
         "clairview_survey"."end_date",
         "clairview_survey"."updated_at",
         "clairview_survey"."archived",
         "clairview_survey"."responses_limit",
         "clairview_survey"."iteration_count",
         "clairview_survey"."iteration_frequency_days",
         "clairview_survey"."iteration_start_dates",
         "clairview_survey"."current_iteration",
         "clairview_survey"."current_iteration_start_date"
  FROM "clairview_survey"
  WHERE "clairview_survey"."linked_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.35
  '''
  SELECT "clairview_earlyaccessfeature"."id",
         "clairview_earlyaccessfeature"."team_id",
         "clairview_earlyaccessfeature"."feature_flag_id",
         "clairview_earlyaccessfeature"."name",
         "clairview_earlyaccessfeature"."description",
         "clairview_earlyaccessfeature"."stage",
         "clairview_earlyaccessfeature"."documentation_url",
         "clairview_earlyaccessfeature"."created_at"
  FROM "clairview_earlyaccessfeature"
  WHERE "clairview_earlyaccessfeature"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.36
  '''
  SELECT "clairview_dashboard"."id",
         "clairview_dashboard"."name",
         "clairview_dashboard"."description",
         "clairview_dashboard"."team_id",
         "clairview_dashboard"."pinned",
         "clairview_dashboard"."created_at",
         "clairview_dashboard"."created_by_id",
         "clairview_dashboard"."deleted",
         "clairview_dashboard"."last_accessed_at",
         "clairview_dashboard"."filters",
         "clairview_dashboard"."creation_mode",
         "clairview_dashboard"."restriction_level",
         "clairview_dashboard"."deprecated_tags",
         "clairview_dashboard"."tags",
         "clairview_dashboard"."share_token",
         "clairview_dashboard"."is_shared"
  FROM "clairview_dashboard"
  INNER JOIN "clairview_featureflagdashboards" ON ("clairview_dashboard"."id" = "clairview_featureflagdashboards"."dashboard_id")
  WHERE (NOT ("clairview_dashboard"."deleted")
         AND "clairview_featureflagdashboards"."feature_flag_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.37
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.38
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.39
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.4
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.40
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.41
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.42
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.43
  '''
  SELECT "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags"
  FROM "clairview_dashboarditem"
  WHERE "clairview_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.44
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.45
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.46
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.47
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.48
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.49
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.5
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.50
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.51
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.52
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.53
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.54
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.55
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.56
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.57
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.58
  '''
  SELECT "clairview_dashboardtile"."id",
         "clairview_dashboardtile"."dashboard_id",
         "clairview_dashboardtile"."insight_id",
         "clairview_dashboardtile"."text_id",
         "clairview_dashboardtile"."layouts",
         "clairview_dashboardtile"."color",
         "clairview_dashboardtile"."filters_hash",
         "clairview_dashboardtile"."last_refresh",
         "clairview_dashboardtile"."refreshing",
         "clairview_dashboardtile"."refresh_attempt",
         "clairview_dashboardtile"."deleted"
  FROM "clairview_dashboardtile"
  WHERE "clairview_dashboardtile"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.59
  '''
  SELECT "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags"
  FROM "clairview_dashboarditem"
  WHERE "clairview_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.6
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE (NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."key" = 'copied-flag-key'
         AND "clairview_featureflag"."team_id" = 2)
  ORDER BY "clairview_featureflag"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.60
  '''
  SELECT "clairview_dashboard"."id",
         "clairview_dashboard"."name",
         "clairview_dashboard"."description",
         "clairview_dashboard"."team_id",
         "clairview_dashboard"."pinned",
         "clairview_dashboard"."created_at",
         "clairview_dashboard"."created_by_id",
         "clairview_dashboard"."deleted",
         "clairview_dashboard"."last_accessed_at",
         "clairview_dashboard"."filters",
         "clairview_dashboard"."creation_mode",
         "clairview_dashboard"."restriction_level",
         "clairview_dashboard"."deprecated_tags",
         "clairview_dashboard"."tags",
         "clairview_dashboard"."share_token",
         "clairview_dashboard"."is_shared"
  FROM "clairview_dashboard"
  WHERE "clairview_dashboard"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.61
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.62
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.63
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.64
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.65
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.66
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_V2_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.67
  '''
  SELECT "clairview_instancesetting"."id",
         "clairview_instancesetting"."key",
         "clairview_instancesetting"."raw_value"
  FROM "clairview_instancesetting"
  WHERE "clairview_instancesetting"."key" = 'constance:clairview:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "clairview_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.68
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.69
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.7
  '''
  SELECT 1 AS "a"
  FROM "clairview_featureflag"
  WHERE (NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."key" = 'copied-flag-key'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.70
  '''
  SELECT "clairview_experiment"."id",
         "clairview_experiment"."name",
         "clairview_experiment"."description",
         "clairview_experiment"."team_id",
         "clairview_experiment"."filters",
         "clairview_experiment"."parameters",
         "clairview_experiment"."secondary_metrics",
         "clairview_experiment"."created_by_id",
         "clairview_experiment"."feature_flag_id",
         "clairview_experiment"."exposure_cohort_id",
         "clairview_experiment"."start_date",
         "clairview_experiment"."end_date",
         "clairview_experiment"."created_at",
         "clairview_experiment"."updated_at",
         "clairview_experiment"."archived"
  FROM "clairview_experiment"
  WHERE "clairview_experiment"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.71
  '''
  SELECT "clairview_survey"."id",
         "clairview_survey"."team_id",
         "clairview_survey"."name",
         "clairview_survey"."description",
         "clairview_survey"."linked_flag_id",
         "clairview_survey"."targeting_flag_id",
         "clairview_survey"."type",
         "clairview_survey"."conditions",
         "clairview_survey"."questions",
         "clairview_survey"."appearance",
         "clairview_survey"."created_at",
         "clairview_survey"."created_by_id",
         "clairview_survey"."start_date",
         "clairview_survey"."end_date",
         "clairview_survey"."updated_at",
         "clairview_survey"."archived",
         "clairview_survey"."responses_limit"
  FROM "clairview_survey"
  WHERE "clairview_survey"."linked_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.72
  '''
  SELECT "clairview_earlyaccessfeature"."id",
         "clairview_earlyaccessfeature"."team_id",
         "clairview_earlyaccessfeature"."feature_flag_id",
         "clairview_earlyaccessfeature"."name",
         "clairview_earlyaccessfeature"."description",
         "clairview_earlyaccessfeature"."stage",
         "clairview_earlyaccessfeature"."documentation_url",
         "clairview_earlyaccessfeature"."created_at"
  FROM "clairview_earlyaccessfeature"
  WHERE "clairview_earlyaccessfeature"."feature_flag_id" = 2
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.73
  '''
  SELECT "clairview_dashboard"."id",
         "clairview_dashboard"."name",
         "clairview_dashboard"."description",
         "clairview_dashboard"."team_id",
         "clairview_dashboard"."pinned",
         "clairview_dashboard"."created_at",
         "clairview_dashboard"."created_by_id",
         "clairview_dashboard"."deleted",
         "clairview_dashboard"."last_accessed_at",
         "clairview_dashboard"."filters",
         "clairview_dashboard"."creation_mode",
         "clairview_dashboard"."restriction_level",
         "clairview_dashboard"."deprecated_tags",
         "clairview_dashboard"."tags",
         "clairview_dashboard"."share_token",
         "clairview_dashboard"."is_shared"
  FROM "clairview_dashboard"
  INNER JOIN "clairview_featureflagdashboards" ON ("clairview_dashboard"."id" = "clairview_featureflagdashboards"."dashboard_id")
  WHERE (NOT ("clairview_dashboard"."deleted")
         AND "clairview_featureflagdashboards"."feature_flag_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.8
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."deleted"
         AND "clairview_featureflag"."key" = 'copied-flag-key'
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_create_new.9
  '''
  SELECT (true) AS "flag_X_condition_0"
  FROM "clairview_person"
  WHERE "clairview_person"."team_id" = 2
  LIMIT 10
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.1
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.2
  '''
  SELECT 1 AS "a"
  FROM "clairview_organizationmembership"
  WHERE ("clairview_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "clairview_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.3
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.4
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE (NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."key" = 'key-1'
         AND "clairview_featureflag"."team_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */))
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.5
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.6
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.7
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
